# KGOK_task_manager

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
docker/nginx/: nginx.conf
docker/web/: Dockerfile  entrypoint.sh
docs/ADR/: 001-project-mvp.md
docs/decisions/: 2025-11-12-docker-fix..md  2025-11-13-docker_crlf_troubleshooting.md  2025-11-14-dev-code-mounting.md  2025-11-15-test-data-login-fix.md
kapantask/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
tasks/management/commands/: setup_demo_data.py
tasks/migrations/: 0001_initial.py  __init__.py
tasks/templates/: base.html
tasks/templates/registration/: login.html
tasks/templates/tasks/: admin_dashboard.html  dashboard.html  department_form.html  department_list.html  email_config.html  task_detail.html  task_form.html  task_list.html  user_dashboard.html
tasks/tests/: test_models.py  test_views.py
